[gd_scene load_steps=13 format=2]

[ext_resource path="res://World/Camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Props/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Level3/Level3.gd" type="Script" id=6]
[ext_resource path="res://Assets/Background/bg_level0_blue.png" type="Texture" id=7]
[ext_resource path="res://World/Music/MusicControl.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/WeaponUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/AmmoUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/TeleportBallUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://World/PausePopup.tscn" type="PackedScene" id=12]

[node name="Level3" type="Node2D"]
script = ExtResource( 6 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 368.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 336, 160 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap" parent="Navigation2D" instance=ExtResource( 4 )]
pause_mode = 2
collision_layer = 1025
tile_data = PoolIntArray( -65538, 20, 0, -65537, 20, 1, -131072, 20, 1, -131071, 20, 1, -131070, 20, 1, -131069, 20, 1, -131068, 20, 1, -131067, 20, 1, -131066, 20, 1, -131065, 20, 1, -131064, 20, 1, -131063, 20, 1, -131062, 20, 1, -131061, 20, 1, -131060, 20, 1, -131059, 20, 1, -131058, 20, 1, -131057, 20, 1, -131056, 20, 1, -131055, 20, 1, -131054, 20, 1, -131053, 20, 1, -131052, 20, 1, -131051, 20, 1, -131050, 20, 1, -131049, 20, 1, -131048, 20, 1, -131047, 20, 1, -131046, 20, 1, -131045, 20, 1, -131044, 20, 1, -131043, 20, 1, -131042, 20, 1, -131041, 20, 1, -131040, 20, 1, -131039, 20, 1, -131038, 20, 1, -131037, 20, 1, -131036, 20, 1, -131035, 20, 1, -131034, 20, 1, -131033, 20, 1, -131032, 20, 1, -131031, 20, 1, -131030, 20, 2, -2, 20, 65536, -1, 20, 65537, -65536, 20, 65537, -65535, 20, 65537, -65534, 20, 65537, -65533, 20, 65537, -65532, 20, 65537, -65531, 20, 65537, -65530, 20, 65537, -65529, 20, 65537, -65528, 20, 65537, -65527, 20, 65537, -65526, 20, 65537, -65525, 20, 65537, -65524, 20, 65537, -65523, 20, 65537, -65522, 20, 65537, -65521, 20, 65537, -65520, 20, 65537, -65519, 20, 65537, -65518, 20, 65537, -65517, 20, 65537, -65516, 20, 65537, -65515, 20, 65537, -65514, 20, 65537, -65513, 20, 65537, -65512, 20, 65537, -65511, 20, 65537, -65510, 20, 65537, -65509, 20, 65537, -65508, 20, 65537, -65507, 20, 65537, -65506, 20, 65537, -65505, 20, 65537, -65504, 20, 65537, -65503, 20, 65537, -65502, 20, 65537, -65501, 20, 65537, -65500, 20, 65537, -65499, 20, 65537, -65498, 20, 65537, -65497, 20, 65537, -65496, 20, 65537, -65495, 20, 65537, -65494, 20, 65538, 65534, 20, 65536, 65535, 20, 65537, 0, 20, 65541, 1, 20, 131073, 2, 20, 131073, 3, 20, 131073, 4, 20, 131073, 5, 20, 131073, 6, 20, 131073, 7, 20, 131073, 8, 20, 131073, 9, 20, 131073, 10, 20, 131073, 11, 20, 131073, 12, 20, 131073, 13, 20, 131073, 14, 20, 131073, 15, 20, 131073, 16, 20, 131073, 17, 20, 131073, 18, 20, 131073, 19, 20, 131073, 20, 20, 131073, 21, 20, 131073, 22, 20, 131073, 23, 20, 131073, 24, 20, 131073, 25, 20, 131073, 26, 20, 131073, 27, 20, 131073, 28, 20, 131073, 29, 20, 131073, 30, 20, 131073, 31, 20, 131073, 32, 20, 131073, 33, 20, 131073, 34, 20, 131073, 35, 20, 131073, 36, 20, 131073, 37, 20, 131073, 38, 20, 131073, 39, 20, 65542, 40, 20, 65537, 41, 20, 65537, 42, 20, 65538, 131070, 20, 65536, 131071, 20, 65537, 65536, 20, 65538, 65575, 20, 65536, 65576, 20, 65537, 65577, 20, 65537, 65578, 20, 65538, 196606, 20, 65536, 196607, 20, 65537, 131072, 20, 65538, 131074, 19, 0, 131075, 19, 0, 131076, 19, 0, 131077, 19, 0, 131078, 19, 0, 131079, 19, 0, 131080, 19, 0, 131081, 19, 0, 131082, 19, 0, 131083, 19, 0, 131084, 19, 0, 131085, 19, 0, 131086, 19, 0, 131087, 19, 0, 131088, 19, 0, 131089, 19, 0, 131090, 19, 0, 131091, 19, 0, 131092, 19, 0, 131093, 19, 0, 131094, 19, 0, 131095, 19, 0, 131096, 19, 0, 131097, 19, 0, 131098, 19, 0, 131099, 19, 0, 131100, 19, 0, 131101, 19, 0, 131102, 19, 0, 131103, 19, 0, 131104, 19, 0, 131105, 19, 0, 131106, 19, 0, 131107, 19, 0, 131108, 19, 0, 131109, 19, 0, 131111, 20, 65536, 131112, 20, 65537, 131113, 20, 65537, 131114, 20, 65538, 262142, 20, 65536, 262143, 20, 65537, 196608, 20, 65538, 196610, 19, 0, 196611, 19, 0, 196612, 19, 0, 196613, 19, 0, 196614, 19, 0, 196615, 19, 0, 196616, 19, 0, 196617, 19, 0, 196618, 19, 0, 196619, 19, 0, 196620, 19, 0, 196621, 19, 0, 196622, 19, 0, 196623, 19, 0, 196624, 19, 0, 196625, 19, 0, 196626, 19, 0, 196627, 19, 0, 196628, 19, 0, 196629, 19, 0, 196630, 19, 0, 196631, 19, 0, 196632, 19, 0, 196633, 19, 0, 196634, 19, 0, 196635, 19, 0, 196636, 19, 0, 196637, 19, 0, 196638, 19, 0, 196639, 19, 0, 196640, 19, 0, 196641, 19, 0, 196642, 19, 0, 196643, 19, 0, 196644, 19, 0, 196645, 19, 0, 196647, 20, 65536, 196648, 20, 65537, 196649, 20, 65537, 196650, 20, 65538, 327678, 20, 65536, 327679, 20, 65537, 262144, 20, 65538, 262146, 19, 0, 262147, 19, 0, 262148, 19, 0, 262149, 19, 0, 262150, 19, 0, 262151, 19, 0, 262152, 19, 0, 262153, 19, 0, 262154, 19, 0, 262155, 19, 0, 262156, 19, 0, 262157, 19, 0, 262158, 19, 0, 262159, 19, 0, 262160, 19, 0, 262161, 19, 0, 262162, 19, 0, 262163, 19, 0, 262164, 19, 0, 262165, 19, 0, 262166, 19, 0, 262167, 19, 0, 262168, 19, 0, 262169, 19, 0, 262170, 19, 0, 262171, 19, 0, 262172, 19, 0, 262173, 19, 0, 262174, 19, 0, 262175, 19, 0, 262176, 19, 0, 262177, 19, 0, 262178, 19, 0, 262179, 19, 0, 262180, 19, 0, 262181, 19, 0, 262183, 20, 65536, 262184, 20, 65537, 262185, 20, 65537, 262186, 20, 65538, 393214, 20, 65536, 393215, 20, 65537, 327680, 20, 65538, 327682, 19, 0, 327683, 19, 0, 327684, 19, 0, 327685, 19, 0, 327686, 19, 0, 327687, 19, 0, 327688, 19, 0, 327689, 19, 0, 327690, 19, 0, 327691, 19, 0, 327692, 19, 0, 327693, 19, 0, 327694, 19, 0, 327695, 19, 0, 327696, 19, 0, 327697, 19, 0, 327698, 19, 0, 327699, 19, 0, 327700, 19, 0, 327701, 19, 0, 327702, 19, 0, 327703, 19, 0, 327704, 19, 0, 327705, 19, 0, 327706, 19, 0, 327707, 19, 0, 327708, 19, 0, 327709, 19, 0, 327710, 19, 0, 327711, 19, 0, 327712, 19, 0, 327713, 19, 0, 327714, 19, 0, 327715, 19, 0, 327716, 19, 0, 327717, 19, 0, 327719, 20, 65536, 327720, 20, 65537, 327721, 20, 65537, 327722, 20, 65538, 458750, 20, 65536, 458751, 20, 65537, 393216, 20, 65538, 393218, 19, 0, 393219, 19, 0, 393220, 19, 0, 393221, 19, 0, 393222, 19, 0, 393223, 19, 0, 393224, 19, 0, 393225, 19, 0, 393226, 19, 0, 393231, 19, 0, 393232, 19, 0, 393233, 19, 0, 393234, 19, 0, 393235, 19, 0, 393236, 19, 0, 393237, 19, 0, 393238, 19, 0, 393239, 19, 0, 393240, 19, 0, 393245, 19, 0, 393246, 19, 0, 393247, 19, 0, 393248, 19, 0, 393249, 19, 0, 393250, 19, 0, 393251, 19, 0, 393252, 19, 0, 393253, 19, 0, 393255, 20, 65536, 393256, 20, 65537, 393257, 20, 65537, 393258, 20, 65538, 524286, 20, 65536, 524287, 20, 65537, 458752, 20, 65538, 458756, 19, 0, 458757, 19, 0, 458758, 19, 0, 458759, 19, 0, 458760, 19, 0, 458761, 19, 0, 458762, 19, 0, 458764, 20, 196608, 458765, 20, 196610, 458767, 19, 0, 458768, 19, 0, 458769, 19, 0, 458770, 19, 0, 458771, 19, 0, 458772, 19, 0, 458773, 19, 0, 458774, 19, 0, 458775, 19, 0, 458776, 19, 0, 458778, 20, 196608, 458779, 20, 196610, 458781, 19, 0, 458782, 19, 0, 458783, 19, 0, 458784, 19, 0, 458785, 19, 0, 458786, 19, 0, 458787, 19, 0, 458791, 20, 65536, 458792, 20, 65537, 458793, 20, 65537, 458794, 20, 65538, 589822, 20, 65536, 589823, 20, 65537, 524288, 20, 131077, 524289, 20, 5, 524290, 20, 196610, 524292, 19, 0, 524293, 19, 0, 524294, 19, 0, 524295, 19, 0, 524296, 19, 0, 524297, 19, 0, 524298, 19, 0, 524303, 19, 0, 524304, 19, 0, 524305, 19, 0, 524306, 19, 0, 524307, 19, 0, 524308, 19, 0, 524309, 19, 0, 524310, 19, 0, 524311, 19, 0, 524312, 19, 0, 524317, 19, 0, 524318, 19, 0, 524319, 19, 0, 524320, 19, 0, 524321, 19, 0, 524322, 19, 0, 524323, 19, 0, 524325, 20, 196608, 524326, 20, 6, 524327, 20, 131078, 524328, 20, 65537, 524329, 20, 65537, 524330, 20, 65538, 655358, 20, 65536, 655359, 20, 65537, 589824, 20, 65541, 589825, 20, 131074, 589828, 19, 0, 589829, 19, 0, 589830, 19, 0, 589831, 19, 0, 589832, 19, 0, 589833, 19, 0, 589834, 19, 0, 589835, 19, 0, 589836, 19, 0, 589837, 19, 0, 589838, 19, 0, 589839, 19, 0, 589840, 19, 0, 589841, 19, 0, 589842, 19, 0, 589843, 19, 0, 589844, 19, 0, 589845, 19, 0, 589846, 19, 0, 589847, 19, 0, 589848, 19, 0, 589849, 19, 0, 589850, 19, 0, 589851, 19, 0, 589852, 19, 0, 589853, 19, 0, 589854, 19, 0, 589855, 19, 0, 589856, 19, 0, 589857, 19, 0, 589858, 19, 0, 589859, 19, 0, 589862, 20, 131072, 589863, 20, 65542, 589864, 20, 65537, 589865, 20, 65537, 589866, 20, 65538, 720894, 20, 65536, 720895, 20, 65537, 655360, 20, 65538, 655363, 19, 0, 655364, 19, 0, 655365, 19, 0, 655366, 19, 0, 655367, 19, 0, 655368, 19, 0, 655369, 19, 0, 655370, 19, 0, 655371, 19, 0, 655372, 19, 0, 655373, 19, 0, 655374, 19, 0, 655375, 19, 0, 655376, 19, 0, 655377, 19, 0, 655378, 19, 0, 655379, 19, 0, 655380, 19, 0, 655381, 19, 0, 655382, 19, 0, 655383, 19, 0, 655384, 19, 0, 655385, 19, 0, 655386, 19, 0, 655387, 19, 0, 655388, 19, 0, 655389, 19, 0, 655390, 19, 0, 655391, 19, 0, 655392, 19, 0, 655393, 19, 0, 655394, 19, 0, 655395, 19, 0, 655396, 19, 0, 655399, 20, 65536, 655400, 20, 65537, 655401, 20, 65537, 655402, 20, 65538, 786430, 20, 65536, 786431, 20, 65537, 720896, 20, 65538, 720898, 19, 0, 720899, 19, 0, 720900, 19, 0, 720901, 19, 0, 720902, 19, 0, 720903, 19, 0, 720904, 19, 0, 720905, 19, 0, 720906, 19, 0, 720907, 19, 0, 720908, 19, 0, 720909, 19, 0, 720910, 19, 0, 720911, 19, 0, 720912, 19, 0, 720913, 19, 0, 720914, 19, 0, 720915, 19, 0, 720916, 19, 0, 720917, 19, 0, 720918, 19, 0, 720919, 19, 0, 720920, 19, 0, 720921, 19, 0, 720922, 19, 0, 720923, 19, 0, 720924, 19, 0, 720925, 19, 0, 720926, 19, 0, 720927, 19, 0, 720928, 19, 0, 720929, 19, 0, 720930, 19, 0, 720931, 19, 0, 720932, 19, 0, 720933, 19, 0, 720935, 20, 65536, 720936, 20, 65537, 720937, 20, 65537, 720938, 20, 65538, 851966, 20, 65536, 851967, 20, 65537, 786432, 20, 65538, 786434, 19, 0, 786435, 19, 0, 786436, 19, 0, 786437, 19, 0, 786438, 19, 0, 786439, 19, 0, 786440, 19, 0, 786441, 19, 0, 786442, 19, 0, 786443, 19, 0, 786444, 19, 0, 786445, 19, 0, 786446, 19, 0, 786447, 19, 0, 786448, 19, 0, 786455, 19, 0, 786456, 19, 0, 786457, 19, 0, 786458, 19, 0, 786459, 19, 0, 786460, 19, 0, 786461, 19, 0, 786462, 19, 0, 786463, 19, 0, 786464, 19, 0, 786465, 19, 0, 786466, 19, 0, 786467, 19, 0, 786468, 19, 0, 786469, 19, 0, 786471, 20, 65536, 786472, 20, 65537, 786473, 20, 65537, 786474, 20, 65538, 917502, 20, 65536, 917503, 20, 65537, 851968, 20, 65538, 851970, 19, 0, 851971, 19, 0, 851972, 19, 0, 851973, 19, 0, 851974, 19, 0, 851975, 19, 0, 851976, 19, 0, 851977, 19, 0, 851978, 19, 0, 851979, 19, 0, 851980, 19, 0, 851981, 19, 0, 851982, 19, 0, 851983, 19, 0, 851984, 19, 0, 851986, 20, 0, 851987, 20, 1, 851988, 20, 1, 851989, 20, 2, 851991, 19, 0, 851992, 19, 0, 851993, 19, 0, 851994, 19, 0, 851995, 19, 0, 851996, 19, 0, 851997, 19, 0, 851998, 19, 0, 851999, 19, 0, 852000, 19, 0, 852001, 19, 0, 852002, 19, 0, 852003, 19, 0, 852004, 19, 0, 852005, 19, 0, 852007, 20, 65536, 852008, 20, 65537, 852009, 20, 65537, 852010, 20, 65538, 983038, 20, 65536, 983039, 20, 65537, 917504, 20, 65538, 917506, 19, 0, 917507, 19, 0, 917508, 19, 0, 917509, 19, 0, 917515, 19, 0, 917516, 19, 0, 917517, 19, 0, 917518, 19, 0, 917519, 19, 0, 917520, 19, 0, 917522, 20, 65536, 917523, 20, 65537, 917524, 20, 65537, 917525, 20, 65538, 917527, 19, 0, 917528, 19, 0, 917529, 19, 0, 917530, 19, 0, 917531, 19, 0, 917532, 19, 0, 917538, 19, 0, 917539, 19, 0, 917540, 19, 0, 917541, 19, 0, 917543, 20, 65536, 917544, 20, 65537, 917545, 20, 65537, 917546, 20, 65538, 1048574, 20, 65536, 1048575, 20, 65537, 983040, 20, 65538, 983042, 19, 0, 983043, 19, 0, 983044, 19, 0, 983045, 19, 0, 983047, 20, 0, 983048, 20, 1, 983049, 20, 2, 983051, 19, 0, 983052, 19, 0, 983053, 19, 0, 983054, 19, 0, 983055, 19, 0, 983056, 19, 0, 983058, 20, 65536, 983059, 20, 65537, 983060, 20, 65537, 983061, 20, 65538, 983063, 19, 0, 983064, 19, 0, 983065, 19, 0, 983066, 19, 0, 983067, 19, 0, 983068, 19, 0, 983070, 20, 0, 983071, 20, 1, 983072, 20, 2, 983074, 19, 0, 983075, 19, 0, 983076, 19, 0, 983077, 19, 0, 983079, 20, 65536, 983080, 20, 65537, 983081, 20, 65537, 983082, 20, 65538, 1114110, 20, 65536, 1114111, 20, 65537, 1048576, 20, 65538, 1048578, 19, 0, 1048579, 19, 0, 1048580, 19, 0, 1048581, 19, 0, 1048583, 20, 65536, 1048584, 20, 65537, 1048585, 20, 65538, 1048587, 19, 0, 1048588, 19, 0, 1048589, 19, 0, 1048590, 19, 0, 1048591, 19, 0, 1048592, 19, 0, 1048594, 20, 65536, 1048595, 20, 65537, 1048596, 20, 65537, 1048597, 20, 65538, 1048599, 19, 0, 1048600, 19, 0, 1048601, 19, 0, 1048602, 19, 0, 1048603, 19, 0, 1048604, 19, 0, 1048606, 20, 65536, 1048607, 20, 65537, 1048608, 20, 65538, 1048610, 19, 0, 1048611, 19, 0, 1048612, 19, 0, 1048613, 19, 0, 1048615, 20, 65536, 1048616, 20, 65537, 1048617, 20, 65537, 1048618, 20, 65538, 1179646, 20, 65536, 1179647, 20, 65537, 1114112, 20, 65538, 1114114, 19, 0, 1114115, 19, 0, 1114116, 19, 0, 1114117, 19, 0, 1114119, 20, 65536, 1114120, 20, 65537, 1114121, 20, 65538, 1114123, 19, 0, 1114124, 19, 0, 1114125, 19, 0, 1114126, 19, 0, 1114127, 19, 0, 1114128, 19, 0, 1114130, 20, 65536, 1114131, 20, 65537, 1114132, 20, 65537, 1114133, 20, 65538, 1114135, 19, 0, 1114136, 19, 0, 1114137, 19, 0, 1114138, 19, 0, 1114139, 19, 0, 1114140, 19, 0, 1114142, 20, 65536, 1114143, 20, 65537, 1114144, 20, 65538, 1114146, 19, 0, 1114147, 19, 0, 1114148, 19, 0, 1114149, 19, 0, 1114151, 20, 65536, 1114152, 20, 65537, 1114153, 20, 65537, 1114154, 20, 65538, 1245182, 20, 65536, 1245183, 20, 65537, 1179648, 20, 65538, 1179650, 19, 0, 1179651, 19, 0, 1179652, 19, 0, 1179653, 19, 0, 1179655, 20, 65536, 1179656, 20, 65537, 1179657, 20, 65538, 1179659, 19, 0, 1179660, 19, 0, 1179661, 19, 0, 1179662, 19, 0, 1179663, 19, 0, 1179664, 19, 0, 1179666, 20, 65536, 1179667, 20, 65537, 1179668, 20, 65537, 1179669, 20, 65538, 1179671, 19, 0, 1179672, 19, 0, 1179673, 19, 0, 1179674, 19, 0, 1179675, 19, 0, 1179676, 19, 0, 1179678, 20, 65536, 1179679, 20, 65537, 1179680, 20, 65538, 1179682, 19, 0, 1179683, 19, 0, 1179684, 19, 0, 1179685, 19, 0, 1179687, 20, 65536, 1179688, 20, 65537, 1179689, 20, 65537, 1179690, 20, 65538, 1310718, 20, 65536, 1310719, 20, 65537, 1245184, 20, 65538, 1245186, 19, 0, 1245187, 19, 0, 1245188, 19, 0, 1245189, 19, 0, 1245191, 20, 65536, 1245192, 20, 65537, 1245193, 20, 65538, 1245195, 19, 0, 1245196, 19, 0, 1245197, 19, 0, 1245198, 19, 0, 1245199, 19, 0, 1245200, 19, 0, 1245202, 20, 65536, 1245203, 20, 65537, 1245204, 20, 65537, 1245205, 20, 65538, 1245207, 19, 0, 1245208, 19, 0, 1245209, 19, 0, 1245210, 19, 0, 1245211, 19, 0, 1245212, 19, 0, 1245214, 20, 65536, 1245215, 20, 65537, 1245216, 20, 65538, 1245218, 19, 0, 1245219, 19, 0, 1245220, 19, 0, 1245221, 19, 0, 1245223, 20, 65536, 1245224, 20, 65537, 1245225, 20, 65537, 1245226, 20, 65538, 1376254, 20, 65536, 1376255, 20, 65537, 1310720, 20, 65538, 1310727, 20, 65536, 1310728, 20, 65537, 1310729, 20, 65538, 1310738, 20, 65536, 1310739, 20, 65537, 1310740, 20, 65537, 1310741, 20, 65538, 1310750, 20, 65536, 1310751, 20, 65537, 1310752, 20, 65538, 1310759, 20, 65536, 1310760, 20, 65537, 1310761, 20, 65537, 1310762, 20, 65538, 1441790, 20, 65536, 1441791, 20, 65537, 1376256, 20, 131077, 1376257, 20, 1, 1376258, 20, 1, 1376259, 20, 1, 1376260, 20, 1, 1376261, 20, 1, 1376262, 20, 1, 1376263, 20, 131078, 1376264, 20, 65537, 1376265, 20, 131077, 1376266, 20, 1, 1376267, 20, 1, 1376268, 20, 1, 1376269, 20, 1, 1376270, 20, 1, 1376271, 20, 1, 1376272, 20, 1, 1376273, 20, 1, 1376274, 20, 131078, 1376275, 20, 65537, 1376276, 20, 65537, 1376277, 20, 131077, 1376278, 20, 1, 1376279, 20, 1, 1376280, 20, 1, 1376281, 20, 1, 1376282, 20, 1, 1376283, 20, 1, 1376284, 20, 1, 1376285, 20, 1, 1376286, 20, 131078, 1376287, 20, 65537, 1376288, 20, 131077, 1376289, 20, 1, 1376290, 20, 1, 1376291, 20, 1, 1376292, 20, 1, 1376293, 20, 1, 1376294, 20, 1, 1376295, 20, 131078, 1376296, 20, 65537, 1376297, 20, 65537, 1376298, 20, 65538, 1507326, 20, 65536, 1507327, 20, 65537, 1441792, 20, 65537, 1441793, 20, 65537, 1441794, 20, 65537, 1441795, 20, 65537, 1441796, 20, 65537, 1441797, 20, 65537, 1441798, 20, 65537, 1441799, 20, 65537, 1441800, 20, 65537, 1441801, 20, 65537, 1441802, 20, 65537, 1441803, 20, 65537, 1441804, 20, 65537, 1441805, 20, 65537, 1441806, 20, 65537, 1441807, 20, 65537, 1441808, 20, 65537, 1441809, 20, 65537, 1441810, 20, 65537, 1441811, 20, 65537, 1441812, 20, 65537, 1441813, 20, 65537, 1441814, 20, 65537, 1441815, 20, 65537, 1441816, 20, 65537, 1441817, 20, 65537, 1441818, 20, 65537, 1441819, 20, 65537, 1441820, 20, 65537, 1441821, 20, 65537, 1441822, 20, 65537, 1441823, 20, 65537, 1441824, 20, 65537, 1441825, 20, 65537, 1441826, 20, 65537, 1441827, 20, 65537, 1441828, 20, 65537, 1441829, 20, 65537, 1441830, 20, 65537, 1441831, 20, 65537, 1441832, 20, 65537, 1441833, 20, 65537, 1441834, 20, 65538, 1572862, 20, 65536, 1572863, 20, 65537, 1507328, 20, 65537, 1507329, 20, 65537, 1507330, 20, 65537, 1507331, 20, 65537, 1507332, 20, 65537, 1507333, 20, 65537, 1507334, 20, 65537, 1507335, 20, 65537, 1507336, 20, 65537, 1507337, 20, 65537, 1507338, 20, 65537, 1507339, 20, 65537, 1507340, 20, 65537, 1507341, 20, 65537, 1507342, 20, 65537, 1507343, 20, 65537, 1507344, 20, 65537, 1507345, 20, 65537, 1507346, 20, 65537, 1507347, 20, 65537, 1507348, 20, 65537, 1507349, 20, 65537, 1507350, 20, 65537, 1507351, 20, 65537, 1507352, 20, 65537, 1507353, 20, 65537, 1507354, 20, 65537, 1507355, 20, 65537, 1507356, 20, 65537, 1507357, 20, 65537, 1507358, 20, 65537, 1507359, 20, 65537, 1507360, 20, 65537, 1507361, 20, 65537, 1507362, 20, 65537, 1507363, 20, 65537, 1507364, 20, 65537, 1507365, 20, 65537, 1507366, 20, 65537, 1507367, 20, 65537, 1507368, 20, 65537, 1507369, 20, 65537, 1507370, 20, 65538, 1638398, 20, 131072, 1638399, 20, 131073, 1572864, 20, 131073, 1572865, 20, 131073, 1572866, 20, 131073, 1572867, 20, 131073, 1572868, 20, 131073, 1572869, 20, 131073, 1572870, 20, 131073, 1572871, 20, 131073, 1572872, 20, 131073, 1572873, 20, 131073, 1572874, 20, 131073, 1572875, 20, 131073, 1572876, 20, 131073, 1572877, 20, 131073, 1572878, 20, 131073, 1572879, 20, 131073, 1572880, 20, 131073, 1572881, 20, 131073, 1572882, 20, 131073, 1572883, 20, 131073, 1572884, 20, 131073, 1572885, 20, 131073, 1572886, 20, 131073, 1572887, 20, 131073, 1572888, 20, 131073, 1572889, 20, 131073, 1572890, 20, 131073, 1572891, 20, 131073, 1572892, 20, 131073, 1572893, 20, 131073, 1572894, 20, 131073, 1572895, 20, 131073, 1572896, 20, 131073, 1572897, 20, 131073, 1572898, 20, 131073, 1572899, 20, 131073, 1572900, 20, 131073, 1572901, 20, 131073, 1572902, 20, 131073, 1572903, 20, 131073, 1572904, 20, 131073, 1572905, 20, 131073, 1572906, 20, 131074 )

[node name="EnemySpawnerURR" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 608, 96 )
spawn_delay_offset = 2.0
enemies_limit = 3

[node name="EnemySpawnerULL" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 32, 96 )
spawn_delay = 3.0
enemies_limit = 3

[node name="EnemySpawnerUR" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 480, 48 )
spawn_delay_offset = 1.0
enemies_limit = 4
spawning = false
will_wait_for_spawned_enemy_to_die = true

[node name="EnemySpawnerUL" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 160, 48 )
spawn_delay = 3.0
enemies_limit = 4
spawning = false
will_wait_for_spawned_enemy_to_die = true

[node name="EnemySpawnerC" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 320, 176 )
spawn_delay = 3.0
enemies_limit = 4
spawning = false
will_wait_for_spawned_enemy_to_die = true

[node name="EnemySpawnerDRR" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 608, 288 )
enemy_type = 1
spawn_delay = 1.0
enemies_limit = 1
spawning = false
will_wait_for_spawned_enemy_to_die = true

[node name="EnemySpawnerDR" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 448, 304 )
spawn_delay = 1.0
spawn_delay_offset = 4.0
enemies_limit = 3

[node name="EnemySpawnerDLL" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 32, 288 )
enemy_type = 1
spawn_delay_offset = 2.0
enemies_limit = 1
spawning = false
will_wait_for_spawned_enemy_to_die = true

[node name="EnemySpawnerDL" parent="." groups=[
"all_enemy_spawners",
] instance=ExtResource( 3 )]
position = Vector2( 192, 304 )
spawn_delay_offset = 2.0
enemies_limit = 3

[node name="HealthUI" parent="." instance=ExtResource( 2 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 90.0
margin_bottom = 34.0

[node name="WeaponUI" parent="." instance=ExtResource( 9 )]
margin_left = 20.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 60.0

[node name="AmmoUI" parent="." instance=ExtResource( 10 )]
margin_top = 48.0
margin_bottom = 57.0

[node name="TeleportBallUI" parent="." instance=ExtResource( 11 )]

[node name="Camera" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 176 )

[node name="PausePopup" parent="." instance=ExtResource( 12 )]
margin_left = 195.929
margin_top = 121.93
margin_right = 451.929
margin_bottom = 233.93

[node name="MusicControl" parent="." instance=ExtResource( 8 )]
position = Vector2( -28.0115, -25.784 )
